fixed gap

--- a/src/features/amUI/userRightsPage/SingleRightsSection/SingleRightsSection.module.css
+++ b/src/features/amUI/userRightsPage/SingleRightsSection/SingleRightsSection.module.css
@@ -8,7 +8,7 @@
 .headerContainer {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.1rem;
 }
 
 .singleRightsList {
